Bug fix
hidden pots were invisible but still it affected the scroll length. I just
added 'relative' property to them.

--- a/client/index.sass
+++ b/client/index.sass
@@ -344,6 +344,7 @@ a
         .content-preview
           height: calc(40vh - #{$read-more-height})
           overflow: hidden
+          position: relative
           &::after
             $after-fade-out-height: 5em
             content: ''
